--- a/src/forms.css
+++ b/src/forms.css
@@ -1,11 +1,30 @@
-label {
-    border:1px solid #ccc;
-    padding:10px;
-    margin:0 0 10px;
-    display:block;
+div.label {
+    border:solid 1px gray;
+    line-height:40px;
+    height:40px;
+    width: 250px;
+    border-radius:40px;
+    -webkit-font-smoothing: antialiased;
+    margin-top:10px;
+    font-family:Arial,Helvetica,sans-serif;
+    color:gray;
+    text-align:center;
 }
 
-label:hover {
-    background:#eee;
-    cursor:pointer;
+label {
+    display:inline;
+    text-align:center;
+}
+
+input[type=checkbox] {
+    display: none;
+}
+
+input:checked + div {
+    border: solid 1px red;
+    color: #F00;
+}
+
+input:checked + div:before {
+    content: "\2713";
 }
